# SOEM-rust

./: .gitignore  Cargo.toml  build.rs
src/: bindings.rs  main.rs  simple_ng.rs
